switch error notifications from honeybadger to sentry